tests/invalid/syntax_err_no_semicolon.c
int main() {
    int a = 2
    a = a + 4;
    return a;
}
// ERROR: Line 3, Error 2003